Grace/tests/gibbs/errors/t291.grace
// ERROR = P1018
var a := 42
print(a :. )
